fix(vercel): move includeFiles to builds[api] config and remove functions

--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,12 @@
     },
     {
       "src": "api/index.mjs",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["backend/**"]
+      }
     }
   ],
-  "functions": {
-    "api/index.mjs": {
-      "includeFiles": "backend/**"
-    }
-  },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.mjs" },
     { "src": "/(.*)", "dest": "frontend/build/$1" }
