--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,7 @@
     }
   ],
   "routes": [
+    { "src": "/api", "dest": "/api/index.mjs" },
     { "src": "/api/(.*)", "dest": "/api/index.mjs" },
     { "src": "/(.*)", "dest": "frontend/build/$1" }
   ]
